--- a/DineDash/src/components/Fooditem/Fooditem.css
+++ b/DineDash/src/components/Fooditem/Fooditem.css
@@ -22,20 +22,52 @@
     align-items: center;
     margin-bottom: 10px;
 }
-.food-item-name-rating p{
+
+.food-item-name-rating p {
     font-size: 20px;
     font-weight: 500;
 }
-.food-item-name-rating img{
+
+.food-item-name-rating img {
     width: 70px;
 }
-.food-item-description{
+
+.food-item-description {
     color: #676767;
     font-size: 15px;
 }
-.food-item-price{
+
+.food-item-price {
     color: tomato;
-        font-size: 22px;
-        font-weight: 500;
-        margin: 10px,0px;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 10px, 0px;
+}
+
+.food-item-image-container {
+    position: relative;
+
+}
+
+.food-item-image-container .add {
+    width: 35px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.food-item-counter{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color:white;
+    align-items: center;
+}
+.food-item-counter img{
+    width:30px;
 }
