--- a/DineDash/src/components/Explore_menu2/explore_menu2.css
+++ b/DineDash/src/components/Explore_menu2/explore_menu2.css
@@ -1,54 +1,101 @@
-.explore_menu{
+.explore_menu {
     margin: 10px;
-    /* margin-left :5%; 
-    margin-right: 5%; */
-    padding: 30px;   
+    padding: 30px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    text-align: center;
 }
-.explore_menu h1{
+
+.explore_menu h1 {
     color: #262626;
     font-weight: 500;
-    font-size: 50px;
+    font-size: 3vw;
 }
+
 .explore_menu_text {
     max-width: 80%;
-    /* color: #262626; */
-    font-size: 20px;
+    font-size: 1.25vw;
+    margin: 0 auto;
 }
-.explore_menu_list{
+
+.explore_menu_list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     gap: 30px;
-    text-align: center;
     margin: 20px 0px;
-    /* overflow-x: scroll; */
 }
-/* .explore_menu_list::-webkit-scrollbar{
-display: none;
-} */
-.explore_menu_list_item img{
-    width: 7.5vw;
+
+.explore_menu_list_item img {
+    width: 8vw;
     min-width: 80px;
     cursor: pointer;
     border-radius: 50%;
-    transition:0.2s ;
+    transition: 0.2s;
 }
-.explore_menu_list_item p{
+
+.explore_menu_list_item p {
     margin-top: 10px;
     color: #262626;
-    font-size: max(1.4vw,16px) ;
+    font-size: max(1.4vw, 16px);
     cursor: pointer;
 }
-.explore_menu hr{
+
+.explore_menu hr {
     background-color: #949494;
     margin: 10px 0px;
     height: 2px;
     border: none;
 }
-.explore_menu_list_item .active{
+
+.explore_menu_list_item .active {
     border: 4px solid tomato;
     padding: 2px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .explore_menu h1 {
+        font-size: 6vw;
+    }
+
+    .explore_menu_text {
+        font-size: 3vw;
+    }
+
+    .explore_menu_list {
+        gap: 20px;
+    }
+
+    .explore_menu_list_item img {
+        width: 15vw;
+    }
+
+    .explore_menu_list_item p {
+        font-size: 4vw;
+    }
+}
+
+@media (max-width: 480px) {
+    .explore_menu h1 {
+        font-size: 8vw;
+    }
+
+    .explore_menu_text {
+        font-size: 4vw;
+    }
+
+    .explore_menu_list {
+        gap: 10px;
+    }
+
+    .explore_menu_list_item img {
+        width: 25vw;
+    }
+
+    .explore_menu_list_item p {
+        font-size: 5vw;
+    }
 }
